--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -23,7 +23,7 @@
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css" />
     <!-- fevicon -->
-    @*<link rel="icon" href="~/Content/images/fevicon.png" type="image/gif" />*@
+    <link rel="icon" href="~/Content/images/logo-web.jpg" type="image/gif" />
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="~/Content/css/jquery.mCustomScrollbar.min.css" />
     <!-- font-awesome -->
@@ -163,7 +163,7 @@
         @{ Html.RenderAction("GetMenuBar", "MainPartial"); }
     </div>
 
-    <div class="content">
+    <div class="content mb-4">
         @RenderBody()
     </div>
 
