--- a/Views/User/EditPostRoom.cshtml
+++ b/Views/User/EditPostRoom.cshtml
@@ -242,9 +242,7 @@
 
 @section script
 {
-    @*<script src="~/Scripts/js/manage-main.js"></script>*@
-    @*<script src="~/Scripts/js/tinh-thanh.js"></script>*@
-    @*<script src="~/Scripts/my-js/hoitro.user.dashboard.js"></script>*@
+    <script src="~/Scripts/my-js/hoitro.user.dashboard.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js" integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
     <!-- JavaScript của Dropzone -->
