--- a/Views/User/PostRoom.cshtml
+++ b/Views/User/PostRoom.cshtml
@@ -250,7 +250,7 @@
 
 @section script
 {
-    @*<script src="~/Scripts/js/manage-main.js"></script>*@
+    <script src="~/Scripts/my-js/hoitro.user.dashboard.js"></script>
     @*<script src="~/Scripts/js/tinh-thanh.js"></script>*@
     <script src="~/Scripts/my-js/hoitro.user.dashboard.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.min.js" integrity="sha256-AlTido85uXPlSyyaZNsjJXeCs07eSv3r43kyCVc8ChI=" crossorigin="anonymous"></script>
