--- a/Areas/Admin/Views/Default/Login.cshtml
+++ b/Areas/Admin/Views/Default/Login.cshtml
@@ -60,7 +60,7 @@
                 <form id="login-form">
                     @Html.AntiForgeryToken() <!-- Bảo mật -->
                     <div class="form-group pb-3">
-                        <input type="email" placeholder="Email" class="form-control" id="Email" name="Email" required>
+                        <input type="text" placeholder="Email" class="form-control" id="Email" name="Email" required>
                     </div>
                     <div class="form-group pb-3">
                         <input type="password" placeholder="Mật khẩu" class="form-control" id="Password" name="Password" required>
