--- a/Views/Contact/getContact.cshtml
+++ b/Views/Contact/getContact.cshtml
@@ -18,13 +18,13 @@
                 <form id="request" class="main_form">
                     <div class="row">
                         <div class="col-md-12 ">
-                            <input class="contactus" placeholder="Họ và Tên" type="type" name="Name">
+                            <input class="contactus" placeholder="Họ và Tên" type="text" name="Name">
                         </div>
                         <div class="col-md-12">
-                            <input class="contactus" placeholder="Email" type="type" name="Email">
+                            <input class="contactus" placeholder="Email" type="email" name="Email">
                         </div>
                         <div class="col-md-12">
-                            <input class="contactus" placeholder="Số điện thoại" type="type" name="Phone Number">
+                            <input class="contactus" placeholder="Số điện thoại" type="number" name="Phone Number">
                         </div>
                         <div class="col-md-12">
                             <textarea class="textarea" placeholder="Vấn đề của bạn" type="type" Message="Name"></textarea>
