--- a/Views/RoomInfo/RoomDetail.cshtml
+++ b/Views/RoomInfo/RoomDetail.cshtml
@@ -173,9 +173,11 @@
 
                     @*thông tin mô tả*@
                     <section class="section post-main-content">
-                        <div class="section-header"><h2 class="section-title">Thông tin mô tả</h2></div>
+                        <div class="section-header mb-1"><h2 class="section-title">Thông tin mô tả</h2></div>
                         <div class="section-content">
-                            <p>@Html.Raw(Model.detail_description)</p>
+                            <p style="white-space: pre-line;">
+                            @Model.detail_description
+                            </p>
                         </div>
                     </section>
                     @*đặc điểm đăng tin*@
